// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeaderLabel renders 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with grow 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left ax-table__header-label--grow"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with shrink 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left ax-table__header-label--shrink"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with sortDirection 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left ax-table__header-label--selected"
>
  <div
    className="ax-table__header-label-underline ax-table__header-label-underline--selected"
  >
    Test
    <svg
      className="ax-icon ax-icon--triangle-up ax-icon--inline ax-icon--space-left-x2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M13 12L7.93 4 3 12z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </div>
</th>
`;

exports[`TableHeaderLabel renders with textAlign 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-right"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;
